[package]
name = "auxyaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
auxtools = { git = "https://github.com/willox/auxtools" }
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"